--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepages": "http://petar-devi8.github.io/HotelSharkov-4/",
+  "homepage": "http://petar-devi8.github.io/HotelSharkov-4/",
   "name": "sharkov-hotel",
   "private": true,
   "version": "0.0.0",
